# ECE1747-Final-project

./: README.md
CUDA/: sequential.cpp
ECE1747Final-main/: CMakeLists.txt  README.md  test.sh
ECE1747Final-main/CUDA/: README.md  parallel.cu
ECE1747Final-main/MPI/: pagerank_mpi.cpp
ECE1747Final-main/data/: 18000.txt
ECE1747Final-main/openMP/: pagerank_openmp.cpp  pagerank_serial.h
ECE1747Final-main/serial/: pagerank_serial.cpp  pagerank_serial.h
MPI/: pagerank_mpi.cpp
openMP/: pagerank_openmp.cpp
serial/: pagerank_serial.cpp
